# mav_control_rw

./: .gitignore
mav_control_interface/: CMakeLists.txt
mav_control_interface/include/mav_control_interface/: mav_control_interface_cooperative.h  mpc_queue.h  position_controller_interface_cooperative.h  rc_interface_aci.h  rc_interface_aci_cooperative.h
mav_control_interface/libSerial/: uart.c  uart.h  uart_cmd_id.h
mav_control_interface/libTCP/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
mav_control_interface/src/: command_converter.cpp  command_converter.h  command_converter_2.cpp  command_converter_2.h  command_converter_2_TCPClient.cpp  command_converter_2_TCPClient.h  command_converter_2_serial.cpp  command_converter_2_serial.h  command_converter_TCPServer.cpp  command_converter_TCPServer.h  command_converter_serial.cpp  command_converter_serial.h  mav_control_interface_cooperative.cpp  mav_control_interface_cooperative_impl.cpp  mav_control_interface_cooperative_impl.h  mav_control_interface_impl.cpp  mpc_queue.cpp  position_controller_interface_cooperative.cpp  rc_interface_aci.cpp  rc_interface_aci_cooperative.cpp  state_machine.cpp  state_machine.h  state_machine_cooperative.cpp  state_machine_cooperative.h  test_node.cpp
mav_disturbance_observer/include/mav_disturbance_observer/: KF_disturbance_observer.h
mav_disturbance_observer/resources/: disturbance_observer_minidrone_NUC.yaml
mav_disturbance_observer/src/: KF_disturbance_observer.cpp
mav_linear_mpc/: CMakeLists.txt
mav_linear_mpc/cfg/: LinearMPC.cfg
mav_linear_mpc/include/mav_linear_mpc/: linear_mpc.h  linear_mpc_node.h  steady_state_calculation.h
mav_linear_mpc/launch/: mav_linear_mpc_minidrone_NUC.launch  mav_linear_mpc_minidrone_NUC_rc_off.launch  mav_linear_mpc_minidrone_NUC_rc_off_2.launch  mav_linear_mpc_minidrone_NUC_rc_off_2_serial.launch  mav_linear_mpc_minidrone_NUC_rc_off_serial.launch
mav_linear_mpc/lib/: ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp  variables_definition.cpp
mav_linear_mpc/resources/: linear_mpc_minidrone_NUC.yaml
mav_linear_mpc/src/: linear_mpc.cpp  linear_mpc_node.cpp  steady_state_calculation.cpp
